Fixed alt tags.

--- a/templates/boxes/restaurant.html
+++ b/templates/boxes/restaurant.html
@@ -40,7 +40,7 @@
   <div class="content-margins">
 
     <section class="restaurant-header">
-      <img src="{{current.fields.banner_image.url}}" alt="{{current.fields.banner_image.alt}}">
+      <img src="{{current.fields.banner_image.url}}" alt="{{current.fields.banner_image.alt_text}}">
     </section>
 
     <section class="restaurant-content" style='border-color: {{current.fields.primary_color}}'>
@@ -122,7 +122,7 @@
         <a class="more-info">More Info</a>
       </div>
       <div class="rest-single-join-us-img">
-        <img src="{{current.fields.logo.url}}" alt="">
+        <img src="{{current.fields.logo.url}}" alt="{{current.fields.logo.alt_text}}">
       </div>
     </section>
 
