--- a/templates/events_landing.html
+++ b/templates/events_landing.html
@@ -41,7 +41,7 @@
         <p>{{event.fields.dek}}</p>
       </div>
       <div class="home-happenings-img">
-        <img src="{{event.image.url}}" alt="{{event.image.alt_text}}">
+        <img src="{{event.images[0].url}}" alt="{{event.images[0].alt_text}}">
       </div>
     </a>
   {% endfor %}
