--- a/templates/our_story.html
+++ b/templates/our_story.html
@@ -26,7 +26,7 @@
     </div>
   </div>
   <div class="full-width-header-img">
-    <img src="{{field.full_width_header_box.image.url}}" alt="">
+    <img src="{{field.full_width_header_box.image.url}}" alt="{{field.full_width_header_box.image.alt_text}}">
   </div>
 </section>
 
