--- a/templates/restaurant_landing.html
+++ b/templates/restaurant_landing.html
@@ -36,7 +36,7 @@
           <div class="rest-landing-rest-img-cont"
             style='background-color: {% if rest.fields.secondary_color %}{{rest.fields.secondary_color}}; {% else %}{{rest.fields.primary_color}}; {% endif %}'
             >
-            <img src="{{rest.fields.logo.url}}" alt="{{rest.fields.logo.alt}}">
+            <img src="{{rest.fields.logo.url}}" alt="{{rest.fields.logo.alt_text}}">
           </div>
         </section>
 
