--- a/templates/shop.html
+++ b/templates/shop.html
@@ -26,7 +26,7 @@
       <article class="kiosk-box">
           <a href="">
             <div class="kiosk-box-img">
-              <img src="{{shop.image.url}}" alt="{{shop.image.alt}}">
+              <img src="{{shop.image.url}}" alt="{{shop.image.alt_text}}">
               <h4>{{shop.hover_text}}</h4>
             </div>
             <h6>{{shop.name}}</h6>
@@ -54,7 +54,7 @@
       <article class="kiosk-box">
           <a href="">
             <div class="kiosk-box-img kiosk-bordered-img">
-              <img src="{{shop.image.url}}" alt="shop.image.alt">
+              <img src="{{shop.image.url}}" alt="{{shop.image.alt_text}}">
               <h4>{{shop.hover_text}}</h4>
             </div>
             <h6>{{shop.name}}</h6>
