--- a/templates/the_mercado.html
+++ b/templates/the_mercado.html
@@ -10,7 +10,7 @@
     </div>
   </div>
   <div class="full-width-header-img">
-    <img src="{{current.fields.mercado.image.url}}" alt="{{current.fields.mercado.image.alt}}">
+    <img src="{{current.fields.mercado.image.url}}" alt="{{current.fields.mercado.image.alt_text}}">
   </div>
 </section>
 
@@ -26,7 +26,7 @@
         <article class="kiosk-box">
           <a href="{{kiosk.url}}">
             <div class="kiosk-box-img">
-              <img src="{{kiosk.fields.thumbnail_left.url}}" alt="{{kiosk.fields.thumbnail_left.alt}}">
+              <img src="{{kiosk.fields.thumbnail_left.url}}" alt="{{kiosk.fields.thumbnail_left.alt_text}}">
               <h4>{{kiosk.fields.hover_text}}</h4>
             </div>
             <h6>{{kiosk.name}}</h6>
@@ -50,7 +50,7 @@
         <article class="kiosk-box">
           <a href="{{bar.url}}">
             <div class="kiosk-box-img">
-              <img src="{{bar.fields.thumbnail_left.url}}" alt="{{bar.fields.thumbnail_left.alt}}">
+              <img src="{{bar.fields.thumbnail_left.url}}" alt="{{bar.fields.thumbnail_left.alt_text}}">
               <h4>{{bar.fields.hover_text}}</h4>
             </div>
             <h6>{{bar.name}}</h6>
