--- a/templates/boxes/event.html
+++ b/templates/boxes/event.html
@@ -2,7 +2,7 @@
 
 <article class="single-blog single-event">
   <div class="single-blog-img">
-    <img src="{{current.image.url}}" alt="{{current.image.alt_text}}">
+    <img src="{{current.images[0].url}}" alt="{{current.images[0].alt_text}}">
     <!-- <div class="article-info-slide">
       <h6>{{current.name}}</h6>
       <span>Share Article: </span>
@@ -51,7 +51,7 @@
         <a href="{{boxes.kiosks.all[0].url}}">
           <h6>Kiosks</h6>
           <div class="hay-mas-link-icon">
-            <img src="{{boxes.kiosks.all[0].fields.thumbnail_left.url}}" alt="{{boxes.kiosks.all[0].fields.thumbnail_left.alt}}">
+            <img src="{{boxes.kiosks.all[0].fields.thumbnail_left.url}}" alt="{{boxes.kiosks.all[0].fields.thumbnail_left.alt_text}}">
             <span>{{boxes.kiosks.all[0].fields.hover_text}}</span>
           </div>
           <h4>{{boxes.kiosks.all[0].name}}</h4>
@@ -62,7 +62,7 @@
         <a href="{{boxes.events.all[0].url}}">
           <h6>Happenings</h6>
           <div class="hay-mas-link-icon with-padding">
-            <img src="{{boxes.events.all[0].image.url}}" alt="{{boxes.events.all[0].image.alt}}">
+            <img src="{{boxes.events.all[0].images[0].url}}" alt="{{boxes.events.all[0].images[0].alt_text}}">
             <span></span>
           </div>
           <h4>{{boxes.events.all[0].name}}</h4>
@@ -73,7 +73,7 @@
         <a href="{{boxes.blog.all[0].url}}">
           <h6>Mercado Magazine</h6>
           <div class="hay-mas-link-icon with-padding">
-            <img src="{{boxes.blog.all[0].image.url}}" alt="{{boxes.blog.all[0].image.alt}}">
+            <img src="{{boxes.blog.all[0].image.url}}" alt="{{boxes.blog.all[0].image.alt_text}}">
             <span></span>
           </div>
           <h4>{{boxes.blog.all[0].name}}</h4>
@@ -84,7 +84,7 @@
         <a href="{{pages.by_slug.shop.url}}">
           <h6>Shop</h6>
           <div class="hay-mas-link-icon">
-            <img src="{{pages.by_slug.shop.fields['online-products'].products[0].image.url}}" alt="{{pages.by_slug.shop.fields['online-products'].products[0].image.alt}}">
+            <img src="{{pages.by_slug.shop.fields['online-products'].products[0].image.url}}" alt="{{pages.by_slug.shop.fields['online-products'].products[0].image.alt_text}}">
             <span>{{pages.by_slug.shop.fields['online-products'].products[0].hover_text}}</span>
           </div>
           <h4>{{pages.by_slug.shop.fields['online-products'].products[0].name}}</h4>
