--- a/templates/boxes/kiosks.html
+++ b/templates/boxes/kiosks.html
@@ -5,7 +5,7 @@
   <div class="content-margins">
     <h1 class="mobile-kiosk-title">{{current.name}}</h1>
     <div class="page-landing-header">
-      <img src="{{current.fields.thumbnail_left.url}}" alt="current.thumbnail_left.alt">
+      <img src="{{current.fields.thumbnail_left.url}}" alt="{{current.fields.thumbnail_left.alt_text}}">
       <h1>{{current.name}}</h1>
       <div class='kiosk_title'>
 	      <h2>{{current.fields.hover_text}}</h2>
@@ -84,7 +84,7 @@
         <a href="{{boxes.kiosks.all[0].url}}">
           <h6>Kiosks</h6>
           <div class="hay-mas-link-icon">
-            <img src="{{boxes.kiosks.all[0].fields.thumbnail_left.url}}" alt="{{boxes.kiosks.all[0].fields.thumbnail_left.alt}}">
+            <img src="{{boxes.kiosks.all[0].fields.thumbnail_left.url}}" alt="{{boxes.kiosks.all[0].fields.thumbnail_left.alt_text}}">
             <span>{{boxes.kiosks.all[0].fields.hover_text}}</span>
           </div>
           <h4>{{boxes.kiosks.all[0].name}}</h4>
@@ -95,7 +95,7 @@
         <a href="{{boxes.events.all[0].url}}">
           <h6>Happenings</h6>
           <div class="hay-mas-link-icon with-padding">
-            <img src="{{boxes.events.all[0].image.url}}" alt="{{boxes.events.all[0].image.alt}}">
+            <img src="{{boxes.events.all[0].images[0].url}}" alt="{{boxes.events.all[0].images[0].alt_text}}">
             <span></span>
           </div>
           <h4>{{boxes.events.all[0].name}}</h4>
@@ -106,7 +106,7 @@
         <a href="{{boxes.blog.all[0].url}}">
           <h6>Mercado Magazine</h6>
           <div class="hay-mas-link-icon with-padding">
-            <img src="{{boxes.blog.all[0].image.url}}" alt="{{boxes.blog.all[0].image.alt}}">
+            <img src="{{boxes.blog.all[0].image.url}}" alt="{{boxes.blog.all[0].image.alt_text}}">
             <span></span>
           </div>
           <h4>{{boxes.blog.all[0].name}}</h4>
@@ -117,7 +117,7 @@
         <a href="{{pages.by_slug.shop.url}}">
           <h6>Shop</h6>
           <div class="hay-mas-link-icon">
-            <img src="{{pages.by_slug.shop.fields['online-products'].products[0].image.url}}" alt="{{pages.by_slug.shop.fields['online-products'].products[0].image.alt}}">
+            <img src="{{pages.by_slug.shop.fields['online-products'].products[0].image.url}}" alt="{{pages.by_slug.shop.fields['online-products'].products[0].image.alt_text}}">
             <span>{{pages.by_slug.shop.fields['online-products'].products[0].hover_text}}</span>
           </div>
           <h4>{{pages.by_slug.shop.fields['online-products'].products[0].name}}</h4>
