--- a/templates/el_blog.html
+++ b/templates/el_blog.html
@@ -25,7 +25,7 @@
     <article class="blog-post">
       <div class="image">
         <a href='{{post.url}}'>
-          <img src="{{ post.image.url }}" alt='{{post.image.alt}}'>
+          <img src="{{ post.image.url }}" alt='{{post.image.alt_text}}'>
         </a>
       </div>
       <div class="info">
