Added aria label.

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -50,7 +50,7 @@
         <br>
         222.222.2222
       </address><!-- .site-info -->
-      <nav id="footer-navigation" class="menu">
+      <nav id="footer-navigation" class="menu" aria-label="Footer Navigation">
       <ul class="footer-menu">
         {% for item in navs.footer %}
           <li class="nav-item">
