--- a/templates/header.html
+++ b/templates/header.html
@@ -50,7 +50,7 @@
       </svg>
       <span class="screen-reader-text">Toggle Menu</span>
     </a>
-    <nav id="site-navigation" class="menu">
+    <nav id="site-navigation" class="menu" aria-label="Main Site Navigation">
       <div class="mobile-nav-header">
         <a href="{{ account.site.url }}" class="mobile-nav-header-logo">
           <svg>
