--- a/templates/boxes/restaurant.html
+++ b/templates/boxes/restaurant.html
@@ -40,7 +40,9 @@
   <div class="content-margins">
 
     <section class="restaurant-header">
-      <img src="{{current.fields.banner_image.url}}" alt="{{current.fields.banner_image.alt}}">
+      <h1>
+        <img src="{{current.fields.banner_image.url}}" alt="{{current.name}}">
+      </h1>
     </section>
 
     <section class="restaurant-content" style='border-color: {{current.fields.primary_color}}'>
