--- a/assets/css/_header.scss
+++ b/assets/css/_header.scss
@@ -18,10 +18,29 @@ $desktop_mid : 900px;
   padding: 0 30px;
   background: white;
   border-bottom: 2px solid $toro_red;
+  position: fixed;
+  z-index: 10;
+  pointer-events: none;
   @media screen and (max-width: 1030px) {
     height: $header_height_mobile;
     padding-left: $gutter_width_mobile;
     padding-right: 0;
+  }
+
+  .site-branding, #skip-to-navigation-link, #site-navigation{
+    pointer-events: auto;
+  }
+}
+
+.current-home{
+  #masthead{
+    @media (max-width: 767px){
+      border-bottom: 0px;
+      background-color: transparent;
+      .site-branding{
+        visibility: hidden;
+      }
+    }
   }
 }
 
@@ -31,25 +50,11 @@ $desktop_mid : 900px;
   margin-right: 32px;
   display: block;
   color: $toro_red;
-  height: 45px;
-  img, svg {
-    width: auto;
-    height: auto;
-    max-width: 212px;
-    max-height: 45px;
-  } @media screen and (max-width: 1054px) {
-      height: 26px;
-      img, svg {
-        max-height: 26px;
-        max-width: 126px;
-      }
-    }
-    @media screen and (max-width: 1030px) {
-    height: 26px;
-    img, svg {
-      max-height: 26px;
-      max-width: 126px;
-    }
+  // height: 45px;
+  svg {
+    height: 40px;
+    // max-width: 212px;
+    // max-height: 45px;
   }
 }
 
@@ -77,7 +82,7 @@ $desktop_mid : 900px;
           z-index: 1;
           ul {
             display: none;
-          } &:hover, a:focus {
+          } &:hover, a:focus, &:focus-within {
             background: $toro_red;
             color: $white;
             ul, + ul {
@@ -189,8 +194,7 @@ $desktop_mid : 900px;
           }
         } .mobile-nav-header-logo {
           svg {
-            width: 40px;
-            height: 40px;
+            height: 30px;
           }
         } .mobile-nav-header-close {
           font-size: 5.6rem;
@@ -225,5 +229,19 @@ $desktop_mid : 900px;
 
 
 #content {
-  //margin-top: $header_height_desktop;
+  margin-top: $header_height_desktop;
+  @media (max-width: 1030px){
+    margin-top: $header_height_mobile;
+  }
+
+}
+
+.current-home #content{
+  @media (max-width: 767px){
+    margin-top: 0px;
+  }
+}
+
+.branding-header-logo{
+  line-height: 0px;
 }
