--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,10 @@
 <!-- index.html -->
 
 <section class="home-hero">
-  <img src="{{pages.by_slug.home.fields['home-hero-image'].image.url}}" alt="{{pages.by_slug.home.fields['home-hero-image'].image.alt}}">
+  <!-- <img src="{{pages.by_slug.home.fields['home-hero-image'].image.url}}" alt="{{pages.by_slug.home.fields['home-hero-image'].image.alt}}"> -->
+
+  <img src="{{static('img/home-bg.gif')}}" alt="Home Image" class='home-hero-image'>
+  <img src="{{static('img/home-bg-mobile.gif')}}" alt="Home Image" class="home-hero-mobile">
 </section>
 
 
@@ -328,17 +331,18 @@
 
       <article class='blog-post'>
         <div class="image">
-          <a href='{{post.url}}'>
+
             <img src="{{ post.image.url }}" alt='{{post.image.alt}}'>
-          </a>
+
         </div>
         <div class="info">
-          <a href='{{post.url}}'>
+
             <p class="blog-post__tag">{{ post.categories[0].name }}</p>
-            <h1 class="blog-post__title">{{ post.title }}</h1>
+            <h3 class="blog-post__title">{{ post.title }}</h3>
             <p class="blog-post__desc">{{ post.fields.dek }}</p>
-          </a>
+
         </div>
+        <a href='{{post.url}}'></a>
       </article>
 
       {% endif %}
