--- a/assets/css/_footer.scss
+++ b/assets/css/_footer.scss
@@ -50,6 +50,10 @@
   .form-fields__fields-wrapper{
     width: 100%;
     padding-right: 25px;
+    @media (max-width: 767px){
+      padding-right: 0px;
+      margin-bottom: 20px;
+    }
   }
 }
 
