--- a/assets/css/_fonts.scss
+++ b/assets/css/_fonts.scss
@@ -18,20 +18,20 @@ $knockout-feather : "Knockout 68 A", "Knockout 68 B";
 
 @font-face {
   font-family: 'Domaine';
-  src: url('../fonts/Domaine/DomaineDisplayWeb-Bold.eot');
-  src: url('../fonts/Domaine/DomaineDisplayWeb-Bold.eot?#iefix') format('embedded-opentype'),
-       url('../fonts/Domaine/DomaineDisplayWeb-Bold.woff2') format('woff2'),
-       url('../fonts/Domaine/DomaineDisplayWeb-Bold.woff') format('woff');
+  src: url('/../fonts/Domaine/DomaineDisplayWeb-Bold.eot');
+  src: url('/../fonts/Domaine/DomaineDisplayWeb-Bold.eot?#iefix') format('embedded-opentype'),
+       url('/../fonts/Domaine/DomaineDisplayWeb-Bold.woff2') format('woff2'),
+       url('/../fonts/Domaine/DomaineDisplayWeb-Bold.woff') format('woff');
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Domaine';
-  src: url('../fonts/Domaine/DomaineDisplayWeb-BoldItalic.eot');
-  src: url('../fonts/Domaine/DomaineDisplayWeb-BoldItalic.eot?#iefix') format('embedded-opentype'),
-       url('../fonts/Domaine/DomaineDisplayWeb-BoldItalic.woff2') format('woff2'),
-       url('../fonts/Domaine/DomaineDisplayWeb-BoldItalic.woff') format('woff');
+  src: url('/../fonts/Domaine/DomaineDisplayWeb-BoldItalic.eot');
+  src: url('/../fonts/Domaine/DomaineDisplayWeb-BoldItalic.eot?#iefix') format('embedded-opentype'),
+       url('/../fonts/Domaine/DomaineDisplayWeb-BoldItalic.woff2') format('woff2'),
+       url('/../fonts/Domaine/DomaineDisplayWeb-BoldItalic.woff') format('woff');
   font-weight: 400;
   font-style: italic;
 }
