--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,7 +3,7 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 
 @import "variables";
 @import "colors";
-@import "fonts";
+// @import "fonts";
 @import "main";
 @import "header";
 @import "footer";
