--- a/templates/header.html
+++ b/templates/header.html
@@ -23,6 +23,7 @@
   <!-- <link rel="stylesheet" href="{{ static('css/normalize.css') }}">
   <link rel="stylesheet" href="{{ static('css/skeleton.css') }}"> -->
   <link rel="stylesheet" href="{{ static('dist/style.css') }}">
+  <link rel="stylesheet" href="{{ static('fonts/fonts.css') }}">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css">
   <link rel="stylesheet" href="{{static('js/slick/slick.css')}}">
 
