--- a/assets/css/_blog-single.scss
+++ b/assets/css/_blog-single.scss
@@ -23,7 +23,8 @@
     @media (max-width: 985px){
       width: 100%;
       position: relative;
-      height: 45vw;
+      height: 70vw;
+      max-height: 45vh;
     }
     img{
       height: 100%;
@@ -34,10 +35,6 @@
 
   .single-blog-info{
     width: 43%;
-    h1{
-      font-size: 10rem;
-      line-height: 0.8em;
-    }
     h4{
       font-size: 4rem;
       line-height: 0.9em;
