gift card padding

--- a/assets/css/_shop.scss
+++ b/assets/css/_shop.scss
@@ -83,7 +83,7 @@
       font-weight: initial;
       font-family: $knockout-bantam;
       // font-weight: 900;
-      margin-bottom: 20px;
+      margin-bottom: 15px;
     }
     p{
       margin-bottom: 15px;
@@ -96,6 +96,7 @@
     font-family: $knockout-lite;
     font-size: 20px;
     margin: 0 10px;
+    margin-left: 0;
   }
 }
 
