--- a/assets/css/_home.scss
+++ b/assets/css/_home.scss
@@ -39,6 +39,9 @@
     color: $toro_red;
     font-size: 90px;
     text-align: center;
+    @media (max-width: 767px){
+      font-size: 86px;
+    }
 
   }
 }
@@ -214,7 +217,7 @@
   flex-wrap: wrap;
   .home-mercado-kiosk{
     width: 18.5%;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -270,8 +273,8 @@
   }
 }
 
-.home-happenings{
-  margin-bottom: 50px;
+.home-happenings, .home-mercado, .home-shop, .home-el-blog{
+  margin-bottom: 40px;
 }
 .happenings-events{
   display: flex;
@@ -360,7 +363,7 @@
       h6{
         font-family: $knockout-lite;
         text-transform: uppercase;
-        font-size: 30px;
+        font-size: 35px;
       }
       .gift-card-img{
         padding-bottom: 100%;
@@ -405,9 +408,35 @@
 .home-el-blog-posts.blog-articles-container{
   display: flex;
   justify-content: space-between;
-  flex-wrap: wrap;
-}
+  // flex-wrap: wrap;
+  margin-bottom: 30px;
 
+}
+.single-blog-arrow{
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  background-color: $toro_red;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50px;
+  width: 50px;
+  svg{
+    height: 25px;
+    path{
+      fill: white;
+    }
+  }
+}
+.blog-post:hover{
+  .single-blog-arrow{
+    background-color: white;
+    svg path{
+      fill: $toro_red;
+    }
+  }
+}
 .home-hero{
   // margin-bottom: 50px;
   img{
@@ -597,5 +626,26 @@
     align-items: center;
     font-size: 14px;
     font-weight: 600;
+  }
+}
+
+.home-see-more-button{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 40px;
+  a.more-info{
+    border-color: $toro_red;
+    color: $toro_red;
+    &:hover{
+      color: white;
+      background-color: $toro_red;
+    }
+  }
+}
+
+.home-shop-cont .kiosk-grid{
+  .kiosk-box{
+    margin-bottom: 20px;
   }
 }
