--- a/templates/boxes/event.html
+++ b/templates/boxes/event.html
@@ -3,7 +3,7 @@
 <article class="single-blog single-event">
   <div class="single-blog-img">
     <img src="{{current.images[0].url}}" alt="{{current.images[0].alt_text}}">
-    <!-- <div class="article-info-slide">
+    <div class="article-info-slide">
       <h6>{{current.name}}</h6>
       <span>Share Article: </span>
       <div class="single-blog-social-container">
@@ -11,7 +11,7 @@
         <a href="" class='social-twitter'><img src="{{ static('img/Twitter_gray.png') }}" alt="Twitter Icon"></a>
         <a href="" class='social-email'><img src="{{ static('img/Email_gray.png') }}" alt="Email Icon"></a>
       </div>
-    </div> -->
+    </div>
   </div>
   <div class="single-blog-info">
     <div class="single-blog-info-header">
