--- a/templates/el_blog.html
+++ b/templates/el_blog.html
@@ -22,7 +22,7 @@
 <section class="blog-articles-container">
   <div class="content-margins">
 	 {% for post in boxes.blog.all %}
-    <article class="blog-post">
+    <article class="blog-post blog-landing-post">
       <div class="image">
 
           <img src="{{ post.image.url }}" alt='{{post.image.alt}}'>
