--- a/assets/css/_events-single.scss
+++ b/assets/css/_events-single.scss
@@ -14,6 +14,7 @@
         font-family:$domaine;
         text-transform: none;
         font-size: 25px;
+        line-height: 1.3em;
       }
       a{
         color: $toro_red;
@@ -26,5 +27,4 @@
       }
     }
   }
-
 }
