--- a/assets/css/_header.scss
+++ b/assets/css/_header.scss
@@ -36,9 +36,41 @@ $desktop_mid : 900px;
   #masthead{
     @media (max-width: 767px){
       border-bottom: 0px;
+      height: auto;
       background-color: transparent;
+      transition: ease 250ms all;
+      border-bottom: 2px solid transparent;
+      #skip-to-navigation-link{
+        width: calc(25% + 8px);
+        height: 0;
+        padding-bottom: calc(25% + 8px);
+        position: relative;
+        transition: ease 250ms all;
+        svg{
+          position: absolute;
+          left: 0;
+          top: 0;
+          right: 0;
+          bottom: 0;
+          margin: auto;
+        }
+      }
       .site-branding{
-        visibility: hidden;
+        opacity: 0;
+        transition: ease 250ms all;
+      }
+
+
+      &.logo-show{
+        background-color: white;
+        border-bottom: 2px solid $toro_red;
+        #skip-to-navigation-link{
+          width: 70px;
+          padding-bottom: 70px;
+        }
+        .site-branding{
+          opacity: 1;
+        }
       }
     }
   }
