--- a/assets/css/_blog-single.scss
+++ b/assets/css/_blog-single.scss
@@ -165,6 +165,8 @@
       }
       .hay-mas-link-icon{
         width: 100%;
+        height: 0;
+        padding-bottom: 100%;
         margin-bottom: 15px;
         position: relative;
         span{
@@ -187,14 +189,14 @@
 
         img{
           width: 100%;
-          height: auto;
+          height: 100%;
+          object-fit: cover;
           border: 2px solid $toro_red;
         }
-        &.with-padding{
-          height: 0;
-          padding-bottom: 100%;
-          position: relative;
 
+
+
+        &.with-padding {
           img{
             border: 2px solid $toro_red;
             position: absolute;
@@ -206,6 +208,7 @@
             object-fit: cover;
           }
         }
+
       }
 
     }
