--- a/templates/our_story.html
+++ b/templates/our_story.html
@@ -101,7 +101,7 @@
 <div class='content-margins'>
   <div class="section-title-container">
     <img src="{{ static('img/yellow_triangle.png')}}" alt="triangle header">
-    <h2>What the Periodicos<br/>are saying</h2>
+    <h2>What the Periódicos<br/>are saying</h2>
   </div>
   <div class='press_features'>
     {% for press in boxes.press.all %}
