--- a/assets/css/_footer.scss
+++ b/assets/css/_footer.scss
@@ -131,7 +131,18 @@
 .partner-slide {
   color: $toro_red;
   padding: columns(0,1);
+  position: relative;
+  a {
+    display: block;
+    width: 100%;
+    height: 0;
+    padding-bottom: 100%;
+    position: relative;
+  }
   img, svg {
+    position: absolute;
+    left: 0;
+    top: 0;
     width: 100%;
     height: 100%;
     object-fit: contain;
