--- a/templates/gallery_page.html
+++ b/templates/gallery_page.html
@@ -1,5 +1,16 @@
 {% include "header.html" %}
 <article class='gallery-page'>
+  <div class="content-margins">
+
+    <h1 class="mobile-happenings-title">Gallery</h1>
+
+    <div class="page-landing-header">
+      <img src="{{static('img/gallery-images/Left.png')}}" alt="">
+      <h1>Gallery</h1>
+      <img src="{{static('img/gallery-images/Right.png')}}" alt="">
+    </div>
+
+  </div>
 
 
 </article>
