menu rest relationship field

--- a/assets/css/_gallery.scss
+++ b/assets/css/_gallery.scss
@@ -1,3 +1,13 @@
 .gallery-page{
   padding-top: 28px;
 }
+
+.gallery-images{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  img:first-child, img:nth-child(2){
+    width: 49%;
+    height: auto;
+  }
+}
