--- a/assets/css/_gallery.scss
+++ b/assets/css/_gallery.scss
@@ -6,8 +6,58 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  img:first-child, img:nth-child(2){
+  align-items: flex-start;
+  .gallery-image-holder{
+    margin-bottom: 20px;
+    position: relative;
+    height: 0;
+    img{
+      height: 100%;
+      width: 100%;
+      object-fit: cover;
+      position: absolute;
+      left: 0;
+      top: 0;
+    }
+  }
+
+  .gallery-image-holder:nth-child(1), .gallery-image-holder:nth-child(2){
     width: 49%;
+    padding-bottom: 29%;
+  }
+  .gallery-image-holder:nth-child(3){
+    width: 100%;
+    height: auto;
+    img{
+      position: relative;
+    }
+  }
+  .gallery-image-holder:nth-child(4),.gallery-image-holder:nth-child(5), .gallery-image-holder:nth-child(6){
+    width: 32%;
+    padding-bottom: 20%;
+  }
+  .gallery-image-holder:nth-child(7){
+    width: 100%;
+    height: auto;
+  }
+
+  .gallery-image-holder:nth-child(1n+7), .gallery-image-holder:nth-child(2n+7){
+    width: 49%;
+    padding-bottom: 29%;
+  }
+  .gallery-image-holder:nth-child(3n+7){
+    width: 100%;
+    height: auto;
+    img{
+      position: relative;
+    }
+  }
+  .gallery-image-holder:nth-child(4n+7),.gallery-image-holder:nth-child(5n+7), .gallery-image-holder:nth-child(6n+7){
+    width: 32%;
+    padding-bottom: 20%;
+  }
+  .gallery-image-holder:nth-child(7n){
+    width: 100%;
     height: auto;
   }
 }
