mobile nav header

--- a/templates/header.html
+++ b/templates/header.html
@@ -56,7 +56,7 @@
     <nav id="site-navigation" class="menu" aria-label="Main Site Navigation">
       <div class="mobile-nav-header">
         <a href="{{ account.site.url }}" class="mobile-nav-header-logo">
-          {% include "logo.html" %}
+          {% include "logo_square.html" %}
         </a>
         <a href="#" class="mobile-nav-header-close" aria-expanded="true" aria-controls="site-navigation">
           × <span class="screen-reader-text">Close Menu</span>
