--- a/assets/css/_header.scss
+++ b/assets/css/_header.scss
@@ -198,10 +198,11 @@ $desktop_mid : 900px;
           }
         } .mobile-nav-header-logo {
           svg {
-            height: 30px;
+            height: 40px;
+            width: 40px;
           }
         } .mobile-nav-header-close {
-          font-size: 5.6rem;
+          font-size: 4rem;
           width: 22px;
           height: 40px;
           margin-right: 12px;
