--- a/templates/contact.html
+++ b/templates/contact.html
@@ -37,7 +37,7 @@
    function initMap() {
      var mercado = {lat: 40.752732, lng: -74.001128};
      var icon = {
-     	url: "../assets/img/contact-landing/Starburst_Icon.png",
+     	url: "{{ static('img/contact-landing/starburst_icon.png') }}",
      	scaledSize: new google.maps.Size(100, 100)
    	};
    	var mapOptions = {
