--- a/assets/css/_basic.scss
+++ b/assets/css/_basic.scss
@@ -58,17 +58,22 @@
 	h2.bioHeader{
 		font-family: $knockout-bantam;
 		font-size:9rem !important;
-
+		line-height: 9rem !important;
 	}
 
 	h3{
 
 			font-family: $domaine;	font-size: 34px;	font-weight: bold;	line-height: 50px;
 			margin-bottom: 20px;
+			color: $toro_red;
 
 	}
 	h4{
-			font-family: $domaine;	font-size: 25px;margin-bottom: 20px;	font-weight: bold;	line-height: 28px;color: $toro-red;letter-spacing: 0px;
+			font-family: $domaine;	font-size: 25px;margin-bottom: 20px;	font-weight: bold;	line-height: 28px;color: $toro-red;letter-spacing: 0px; padding: 0 120px; margin: 56px 0;
+			@media screen and (max-width: $mobile_max) {
+				padding: 0;
+				margin: 30px 0;
+			}
 	}
 
 	b, strong{
@@ -143,7 +148,8 @@ margin-right:0px;
 		}
 
 		h3{
-			font-size:2.7rem !important;
+			font-size:2.9rem !important;
+			line-height: 4.5rem !important;
 		}
 		h4{
 		}
