--- a/assets/css/_footer.scss
+++ b/assets/css/_footer.scss
@@ -179,13 +179,18 @@
   color: $oro_yellow;
   width: auto;
   height: auto;
-  max-width: columns(4,1);
-  max-height: 84px;
    svg {
-     width: 300px;
+     height: 80px;
      path{
        fill: $oro_yellow;
      }
+  } @media screen and (max-width: $mobile_max) {
+    max-width: 250px;
+    margin-bottom: 36px;
+    svg {
+      width: 100%;
+      height: auto;
+    }
   }
 }
 
@@ -204,6 +209,8 @@ address.site-info {
   } @media screen and (max-width: $mobile_max) {
     flex: initial;
     margin: 0;
+    line-height: 3.6rem;
+    margin-bottom: 36px;
   }
 }
 
@@ -229,6 +236,7 @@ address.site-info {
     }
   } @media screen and (max-width: $mobile_max) {
     flex: initial;
+    line-height: 3.6rem;
   }
 }
 
@@ -239,11 +247,13 @@ address.site-info {
   margin-top: 44px;
   a {
     color: inherit;
+    text-decoration: underline;
     &:hover {
       color: $oro_yellow;
     }
   } @media screen and (max-width: $mobile_max) {
     flex: initial;
     margin-top: 24px;
+    text-transform: uppercase;
   }
 }
